use streamlet instead of java 8 streams